crates/swc_ecma_parser/tests/flow/type_guards/invalid/qualified_parameter.js
type T = (x: { f: mixed }) => x.f is number;
